--- a/typicalSectionAeroelasticity.ipynb
+++ b/typicalSectionAeroelasticity.ipynb
@@ -19,9 +19,11 @@
    "execution_count": 1,
    "id": "e1f2a741-cbb3-4944-81bd-cd65ef534123",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -34,6 +36,7 @@
     "import ipywidgets as wgt\n",
     "import numpy as np\n",
     "import math\n",
+    "from IPython.display import display\n",
     "\n",
     "# This acts like a function allowing the creation of \"struct-like\" objects\n",
     "class defineStruct:\n",
@@ -46,7 +49,13 @@
   {
    "cell_type": "markdown",
    "id": "b2602ff5-4762-464e-8631-f0f89ae99c44",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Set up the typical section graph\n",
     "At this point simply introduce the parts that stay unchanged"
@@ -57,9 +66,11 @@
    "execution_count": 2,
    "id": "3d64d4c5-d0bc-488a-9d54-5808564fe769",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -87,7 +98,13 @@
   {
    "cell_type": "markdown",
    "id": "d6bd389d-0af4-46e6-91dc-36e7bbeb7c2a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "And now define some initial values for the slider variables, to introduce these elements too. Start by plotting the flap front."
    ]
@@ -97,9 +114,11 @@
    "execution_count": 3,
    "id": "274eadc0-7aac-4b60-8460-a22d82e5e7b1",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -136,7 +155,13 @@
   {
    "cell_type": "markdown",
    "id": "162d77d5-e3b4-49a8-b097-292dd75ef83a",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Now also plot the variable dimensions of the typical section."
    ]
@@ -146,9 +171,11 @@
    "execution_count": 4,
    "id": "34876a16-9003-4f07-8db3-1a1a58849556",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -183,7 +210,13 @@
   {
    "cell_type": "markdown",
    "id": "108d0711-6ee9-4880-8ae7-251ea09aea99",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## Use sliders to customise the typical section\n",
     "Start by defining the function that updates the elements of the plot."
@@ -194,9 +227,11 @@
    "execution_count": 5,
    "id": "d3bb008a-9bfd-46f0-a3ae-249d748a8e9a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -226,9 +261,11 @@
    "execution_count": 6,
    "id": "80b5377b-23d6-451f-82bd-023b35c505c3",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -249,37 +286,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "a9a5ffd6-d7a4-46f9-955c-2fe1bb61dcc9",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def updateTypSection_v2(change):\n",
+    "\n",
+    "    # Adapt variables based on sliders\n",
+    "    a = slider_a.value\n",
+    "    cg_a = slider_CGa.value\n",
+    "    c = slider_c.value\n",
+    "    cg_f = slider_CGf.value\n",
+    "    \n",
+    "    # Front flap line\n",
+    "    frontFlapData = getFlapData(c)\n",
+    "    line_flap.set_xdata(frontFlapData[:, 0])\n",
+    "    line_flap.set_ydata(frontFlapData[:, 1])\n",
+    "    line_flap.figure.canvas.draw_idle()\n",
+    "\n",
+    "    # The four variable points\n",
+    "    updatePoints(a, vLine_a, p_a, hLine_a, txt_a) # elastic axis\n",
+    "    updatePoints(cg_a, vLine_CGa, p_CGa, hLine_CGa, txt_CGa) # C.G. airfoil\n",
+    "    updatePoints(c, vLine_c, p_c, hLine_c, txt_c) # hinged flap axis\n",
+    "    updatePoints(cg_f, vLine_CGf, p_CGf, hLine_CGf, txt_CGf) # C.G. flap"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e19640c1-fbeb-4eb0-84b0-16bd8466c97d",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "Define sliders and plot interactive graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9c78ffad-0428-48fa-8c65-bef449caf302",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75aa5b5bb16740299b679668f34c4e38",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=-0.2, description='Elastic Axis', max=0.9, min=-0.9, step=0.01), Float…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07c7826263d547d7856b94bf66a02f37",
+       "model_id": "2af91d6ec1eb42e08a1f5ef41602b111",
        "version_major": 2,
        "version_minor": 0
       },
@@ -300,19 +369,111 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ccbeb442e6d84371bf2df0052a98e58a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=-0.2, description='Elastic Axis', layout=Layout(width='600px'), max=0.9, min=-0.9, step=0.01…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fba91f162d1f4812a4b9caaf5e1d0c2f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.15, description='C.G. Airfoil', layout=Layout(width='600px'), max=0.9, min=-0.9, step=0.01…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "119f0204052a465bbfabb8d35d1cca82",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.4, description='Flap Hinge Axis', layout=Layout(width='600px'), max=0.9, min=-0.9, step=0.…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "024d86c2f4e14418a83132a2ce5e5f37",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.55, description='C.G. Flap', layout=Layout(width='600px'), max=0.9, min=-0.9, step=0.01, s…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "wgt.interact(updateTypSection,\n",
-    "    a = wgt.FloatSlider(value = -0.2, min = -0.9, max = 0.9, step = 0.01, description = 'Elastic Axis'),\n",
-    "    cg_a = wgt.FloatSlider(value = 0.15, min = -0.9, max = 0.9, step = 0.01, description = 'C.G. Airfoil'),\n",
-    "    c = wgt.FloatSlider(value = 0.4, min = -0.9, max = 0.9, step = 0.01, description = 'Flap Hinge Axis'),\n",
-    "    cg_f = wgt.FloatSlider(value = 0.55, min = -0.9, max = 0.9, step = 0.01, description = 'C.G. Flap'))\n",
-    "\n",
-    "# Keep the plt.show() on a separate cell\n",
+    "# Start by plotting graph\n",
     "fig.tight_layout();\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# Customise sliders\n",
+    "stepSize = 0.01\n",
+    "descrWidth = '150px'\n",
+    "sliderWidth = '600px'\n",
+    "\n",
+    "# Define sliders\n",
+    "slider_a = wgt.FloatSlider(value = -0.20, min = -0.9, max = 0.9, step = 0.01, \n",
+    "                           description = 'Elastic Axis', style = {'description_width': descrWidth},\n",
+    "                           layout = wgt.Layout(width = sliderWidth))\n",
+    "slider_CGa = wgt.FloatSlider(value = 0.15, min = -0.9, max = 0.9, step = 0.01, \n",
+    "                             description = 'C.G. Airfoil', style = {'description_width': descrWidth},\n",
+    "                             layout = wgt.Layout(width = sliderWidth))\n",
+    "slider_c = wgt.FloatSlider(value = 0.40, min = -0.9, max = 0.9, step = 0.01,\n",
+    "                           description = 'Flap Hinge Axis', style = {'description_width': descrWidth},\n",
+    "                           layout = wgt.Layout(width = sliderWidth))\n",
+    "slider_CGf = wgt.FloatSlider(value = 0.55, min = -0.9, max = 0.9, step = 0.01, \n",
+    "                             description = 'C.G. Flap', style = {'description_width': descrWidth},\n",
+    "                             layout = wgt.Layout(width = sliderWidth))\n",
+    "\n",
+    "# Link sliders with update function\n",
+    "slider_a.observe(updateTypSection_v2, names = 'value')\n",
+    "slider_CGa.observe(updateTypSection_v2, names = 'value')\n",
+    "slider_c.observe(updateTypSection_v2, names = 'value')\n",
+    "slider_CGf.observe(updateTypSection_v2, names = 'value')\n",
+    "\n",
+    "# Display sliders\n",
+    "display(slider_a, slider_CGa, slider_c, slider_CGf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04187e2d-127e-4fc0-abe2-6b81e15c80b2",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
